--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.29.3",
     "react": "^17.0.2",
     "react-circular-progressbar": "^2.0.4",
+    "react-currency-format": "^1.1.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
