--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.26.1",
     "formik": "^2.2.9",
     "history": "^4.10.0",
+    "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "react": "^17.0.2",
